--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/icon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/icon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/icon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="images/icon-128x128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="images/icon-196x196.png" sizes="196x196">
+    <link rel="apple-touch-icon" href="images/icon-apple-196x196.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <title>Spotify Tools</title>
